@startuml
skinparam linetype ortho
skinparam backgroundColor #1E1E1E
skinparam defaultTextAlignment center
skinparam ArrowColor #B0C4DE
skinparam shadowing false
skinparam FontColor #FFFFFF
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #FFFFFF
skinparam classMethodFontColor #FFFFFF

skinparam class {
  BackgroundColor #2D2D2D
  BorderColor #8A8A8A
  FontColor #E0E0E0
}

!include RecipeRepository.puml
!include RecipeDTOToRecipeMapper.puml

interface RecipeServiceV1 {
    + Recipe createRecipe(RecipeDTO recipeDTO)
    + Recipe getRecipe(Long id)
    + List<Recipe> getRecipes()
    + Recipe updateRecipe(RecipeDTO recipeDTO)
    + Recipe deleteRecipe(Long id)
}

class DefaultRecipeServiceV1 implements RecipeServiceV1 {
    - RecipeRepository repository
    - RecipeDTOToRecipeMapper mapper

    + Recipe createRecipe(RecipeDTO recipeDTO)
    - boolean recipeIsNew(RecipeDTO recipeDTO)
    + getDefaultImage()
    + Recipe getRecipe(Long id)
    + List<Recipe> getRecipes()
    + Recipe updateRecipe(RecipeDTO recipeDTO)
    + Recipe deleteRecipe(Long id)
}

DefaultRecipeServiceV1 --> RecipeRepository
DefaultRecipeServiceV1 --> RecipeDTOToRecipeMapper
@enduml